--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     ports:
       - "6333:6333"
       - "6334:6334"
+    environment:
+      - QDRANT__SERVICE__API_KEY=my_secret_api_key_2025  # <--- This is the new part
     volumes:
       - ./data/qdrant_storage:/qdrant/storage:z
     restart: always
