--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -6,19 +6,20 @@ project:
   description: "SOTA RAG with Contextual Retrieval, Agentic Loops, and GraphRAG."
 
 llm:
-  student:
+  fast:
     provider: "ollama"
-    model_name: "llama3.1:8b-instruct-q8_0" # Use q8 or q4_k_m for better speed/quality balance
+    model_name: "qwen3:4b" # Fast Assistant
     temperature: 0.1 # Lower temp for factual RAG is better
     top_p: 0.9
     max_tokens: 1024
     base_url: "http://localhost:11434"
 
-  teacher:
-    provider: "groq"
-    model_name: "llama-3.3-70b-versatile" # Perfect choice for speed/quality
+  smart:
+    provider: "ollama"
+    model_name: "qwen3:8b" # Senior Expert
     temperature: 0.1
-    max_tokens: 4096 # Needs more tokens for generating "Contextual Summaries"
+    max_tokens: 2048
+    base_url: "http://localhost:11434"
 
 data_pipeline:
   chunking:
@@ -34,7 +35,7 @@ retrieval:
   # Dense Embeddings (Standard Vector Search)
   embedder:
     provider: "huggingface"
-    model_name: "BAAI/bge-m3"
+    model_name: "bge-m3"
     normalize_embeddings: true
 
   # Sparse/Late Interaction (ColBERTv2)
