Add postgress db with  both dense and sparse vector and search with both vectors with sim_search and rrf and adding window context to solve split chunks issue

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -56,8 +56,15 @@ retrieval:
     type: "qdrant"
     host: "localhost"
     port: 6333
-    collection: "slm_rag_contextual_V1" # Renamed to indicate contextual data
+    collection: "slm_rag_contextual_V3" # Renamed to indicate contextual data
     api_key: "${QDRANT_API_KEY}" # Use env var placeholder
+
+  # Postgres Vector Store
+  postgres:
+    host: "localhost"
+    port: 5432
+    dbname: "postgres"
+    user: "postgres"
 
   # NEW: Phase 2 - User Memory
   memory:
